@@ -8,9 +8,10 @@ Version 1.0.5 to be released
 - Bug #239: Syntax error in translated Portuguese error view file (Qiang)
 - Bug: Lazy loading HAS_MANY or MANY_MANY properties will get NULL instead of empty array when the result set is empty (Qiang)
 - Bug: CDateFormatter::formatYear() only returns one digit when the year pattern is 'yy' (Qiang)
+- New #210: Added support for named scope of AR (Qiang)
+- New #211: Enhanced AR by supporting lazy relational query with on-the-fly query parameters (Qiang)
 - New: Deprecated CHtml::getActiveId() (Qiang)
 - New: Added CDbCriteria::mergeWith() (Qiang)
-- New: Added support for named scope of AR (Qiang)
 - New: Added Oracle support for Active Record (Ricardo)
 - New: Modified CClientScript so that it can be used without the presence of a controller (Qiang)
 
